2002-09-13  Nick Drochak  <ndrochak@gol.com>

	* Enum.cs (Format): handle the "d" format for both signed and unsigned
	underlying types.

2002-09-12  Dick Porter  <dick@ximian.com>

	* UIntPtr.cs: Remove the [StructLayout(LayoutKind.Auto)]
	attribute, as there doesn't appear to be any struct
	layout-depending code here (and corcompare says it should be
	LayoutKind.Sequential)

	* Decimal.cs: Stub out missing methods, add
	[DecimalConstantAttribute] to the constant fields (as shown by
	corcompare).

	* LocalDataStoreSlot.cs: 
	* Environment.cs: 
	* Char.cs: 
	* Array.cs: Stub out missing methods.

	* TypedReference.cs: 
	* ArgIterator.cs: Stub out

	* AppDomainSetup.cs: 
	* AppDomain.cs: Stub out missing methods, add missing
	ClassInterface(ClassInterfaceType.None) attribute.

2002-09-12  Nick Drochak  <ndrochak@gol.com>

	* Double.cs (ToString): Throw exception when "X" format is passed in.

Wed Sep 11 15:26:34 CEST 2002 Paolo Molaro <lupus@ximian.com>

	* MonoType.cs: implemented Module property.

Wed Sep 11 12:49:51 CEST 2002 Paolo Molaro <lupus@ximian.com>

	* MonoType.cs, Type.cs: implemented InvokeMember.

Wed Sep 11 11:06:43 CEST 2002 Paolo Molaro <lupus@ximian.com>

	* Delegate.cs: check the type passed to CreateDelegate is a Delegate
	type. Check the method signature matches.

Sat Sep 7 10:16:52 CEST 2002 Paolo Molaro <lupus@ximian.com>

	* RuntimeMethodHandle.cs: implemented GetFunctionPointer().

2002-09-06  Miguel de Icaza  <miguel@ximian.com>

	* Console.cs: Specify an encoder, otherwise we will get the UTF8
	encoder that by default emits the byte markers.

Fri Sep 6 20:14:04 CEST 2002 Paolo Molaro <lupus@ximian.com>

	* Delegate.cs: look also for non-public methods until we have the
	security checks in place.

Fri Sep 6 12:20:06 CEST 2002 Paolo Molaro <lupus@ximian.com>

	* MonoType.cs: consider also the full name in GetInterface.

Fri Sep 6 12:11:28 CEST 2002 Paolo Molaro <lupus@ximian.com>
